# 3DRenderer-2.0

./: .gitignore  CMakeLists.txt  README.md  makefile
models/: ovni_base.mtl
src/: main.cpp
src/Textura/: Textura.cpp  Textura.h
src/Viewport/: Viewport.cpp  Viewport.h
src/app/: app.cpp  app.h
src/app/UI/: MainWindow.cpp  MainWindow.h  UI_STATE.h
src/app/UI/Components/: Vec3Entry.h  Vec3Slider.cpp  Vec3Slider.h
src/app/UI/Components/ReflectionEntry/: ReflectionEntry.cpp  ReflectionEntry.h
src/app/UI/Components/RotationEntry/: RotationEntry.cpp  RotationEntry.h
src/app/UI/Components/ShearEntry/: ShearEntry.cpp  ShearEntry.h
src/app/UI/Components/Vec3Entry/: Vec3Entry.cpp  Vec3Entry.h  Vec3Slider.cpp  Vec3Slider.h
src/app/UI/Pages/: ControlFlow.cpp  ControlFlow.h
src/app/UI/Pages/Header/: Header.cpp  Header.h
src/app/UI/Pages/HorizontalBar/: HorizontalBar.cpp  HorizontalBar.h
src/app/UI/Pages/Page/: Page.cpp  Page.h
src/app/UI/Pages/VerticalBar/: VerticalBar.cpp  VerticalBar.h
src/app/UI/Widgets/: Gradient.cpp  Gradient.h  Label.cpp  Label.h
src/app/UI/Widgets/Frames/: Frame.cpp  Frame.h  ScrollableFrame.cpp  ScrollableFrame.h
src/app/UI/Widgets/Inputs/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  CheckGroup.cpp  CheckGroup.h  IntEntry.cpp  (+5 more)
src/math/: Color3.cpp  Color3.h  Matrix.cpp  Matrix.h  MatrixR.cpp  MatrixR.h  Vector3R.cpp  Vector3R.h  utils.c  utils.cpp  utils.h
src/math/BoundingBox/: BoundingBoxR.cpp  BoundingBoxR.h
src/parser/: ParseOBJFile.cpp  model3.cpp  parser.h
src/parser/objects/: triangle.cpp
src/renderer/: genericRayCast.cpp  meshCollisionCheck.cpp  meshShadowCheck.cpp  rayCast.cpp  renderScreen.cpp  renderer.h  triangleCollisionCheck.cpp
src/scene/: Camera3.cpp  PlaneV.cpp  Scene.cpp  Scene.h  camera.cpp  plane.cpp  scene.h
src/scene/Textura/: Textura.cpp  Textura.h
src/scene/objects/: Material3.h  Mesh3.cpp  Shape.h  Transform3.cpp  Transformable.h  model3.cpp  objects.h  transform.cpp  triangle.cpp
src/scene/objects/Circle/: Circle.cpp  Circle.h
src/scene/objects/Cone/: Cone.cpp  Cone.h
src/scene/objects/Cylinder/: Cylinder.cpp  Cylinder.h
src/scene/objects/Lights/: Light.h  MovableLight.cpp  MovableLight.h  PointLight.cpp  PointLight.h
src/scene/objects/Mesh3/: Mesh3.cpp  Mesh3.h  ParseOBJFile.cpp
src/scene/objects/Plane/: Plane.cpp  Plane.h
src/scene/objects/ShapeGroup/: ShapeGroup.cpp  ShapeGroup.h
src/scene/objects/Sphere/: Sphere.cpp  Sphere.h
src/scene/objects/Triangle/: Triangle.cpp  Triangle.h
src/scene/view/: Camera3.cpp  Camera3.h  view.cpp  view.h
src/texture/: texture.h  textureCPU.cpp
src/utils/: Color3.cpp  ThreadPool.cpp  ThreadPool.h  utils.h  vector.cpp
(+9 files in other folders)
